# Unfolding

./: C:\test.csv  C:\test2.csv  CMakeCache.txt  CMakeLists.txt  Makefile  Population.cpp  Test_Mesh.off  Transformation.cpp  Transformations.cpp  Triangle.cpp  Triangles.cpp  Tut.cpp  Tut03CPUPositionOffset  a.out  animations.cpp  cmake_install.cmake  evaluation.cpp  evaluation.out  functions.cpp  glad.c  glad.h  gmon.out  gradient.cpp  gradient.out  gradient_.cpp  my_test  null.d  off_reader.cpp  polygon.cpp  population.csv  populator.cpp  problem.cpp  qrc_CGAL.cpp  qrc_File.cpp  qrc_Input.cpp  qrc_Triangulation_2.cpp  rot.csv  run1.csv  test.cpp  trans.csv  (+2 more)
CGAL-5.4.1/: CGALConfig.cmake  CGALConfigVersion.cmake  CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
CGAL-5.4.1/examples/Triangulation/: CMakeCache.txt  Makefile  Triangulation_Examples.sublime-project  cmake_install.cmake
CGAL-5.4.1/examples/Triangulation_2/: CMakeCache.txt
CGAL-5.4.1/examples/Triangulation_3/: CMakeCache.txt
CGAL_Qt5_moc_and_resources_autogen/: moc_predefs.h
CGAL_Qt5_moc_and_resources_autogen/34EZIPZFLO/: moc_DemosMainWindow.cpp  moc_DemosMainWindow.cpp.d  moc_GraphicsItem.cpp  moc_GraphicsItem.cpp.d  moc_GraphicsViewInput.cpp  moc_GraphicsViewInput.cpp.d  moc_GraphicsViewNavigation.cpp  moc_GraphicsViewNavigation.cpp.d  moc_camera.cpp  moc_camera.cpp.d  moc_frame.cpp  moc_frame.cpp.d  moc_image_interface.cpp  moc_image_interface.cpp.d  moc_keyFrameInterpolator.cpp  moc_keyFrameInterpolator.cpp.d  moc_manipulatedCameraFrame.cpp  moc_manipulatedCameraFrame.cpp.d  moc_manipulatedFrame.cpp  moc_manipulatedFrame.cpp.d  moc_qglviewer.cpp  moc_qglviewer.cpp.d
Tut 03 OpenGLs Moving Triangle/: CPUPositionOffset.cpp
build-Notepad-Desktop_Qt_6_3_1_GCC_64bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-Notepad-Desktop_Qt_6_3_1_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-b5af0903d41f3774ea45.json  cmakeFiles-v1-13e6ebdfb9da75d62462.json  codemodel-v2-9750ea0a86e154f3d729.json  index-2022-07-22T12-33-29-0168.json  target-Notepad-Debug-5147ced35b6a88b4e4bf.json  target-Notepad_autogen-Debug-6ba7e6c475c68baa2b5d.json  target-Notepad_autogen_timestamp_deps-Debug-3724e00d1277d5991189.json
build-Notepad-Desktop_Qt_6_3_1_GCC_64bit-Debug/.qt/: QtDeploySupport.cmake
build-Notepad-Desktop_Qt_6_3_1_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
build-Notepad-Desktop_Qt_6_3_1_GCC_64bit-Debug/.qtc_clangd/.cache/clangd/index/: QApplication.294EE3D2EC71B950.idx  QMainWindow.295F69880335EAEE.idx  QMenuBar.E860B12D344E0265.idx  QStatusBar.86B9D4AA1F3B7A58.idx  QVariant.D3CED57DFA04D077.idx  QWidget.DF7F21B286B175A2.idx  __stddef_max_align_t.h.29CAE3C0A913F579.idx  align.h.39AE23050B3DB93E.idx  alloca.h.B3C3404035C15EA6.idx  atomic_base.h.F118387B313E4F7F.idx  cstddef.337D34E624285F88.idx  cstdint.131423F6DD978BF6.idx  cxxabi_init_exception.h.430CE6EB8B5EC125.idx  limits.h.DE0F5F3841E211F4.idx  locale.h.5F1EA2E91D0CD92F.idx  main.cpp.F18DFF96892EFF6E.idx  notepad.cpp.284F93B0F68DF0FE.idx  notepad.h.FEC869217CD9BB9E.idx  qaction.h.1D2963AA72256596.idx  qalgorithms.h.2698C0A9EB8D303E.idx  qanystringview.h.5BF745E299564302.idx  qapplication.h.01B902FEF430AF63.idx  qarraydata.h.DAAEA3D001A42F75.idx  qarraydataops.h.D4F257E8307801E0.idx  qarraydatapointer.h.61CEB94223649BBC.idx  qatomic.h.0316CF2F574A9A72.idx  qatomic_cxx11.h.F1EAD2C04EAA2992.idx  qbitmap.h.72CBF0CE1F424A51.idx  (+127 more)
